--- a/gimmix/glade/gimmix.glade
+++ b/gimmix/glade/gimmix.glade
@@ -4,13 +4,13 @@
 <glade-interface>
 
 <widget class="GtkWindow" id="main_window">
-  <property name="width_request">315</property>
+  <property name="width_request">342</property>
   <property name="visible">True</property>
   <property name="title" translatable="yes">Gimmix</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
-  <property name="resizable">True</property>
+  <property name="resizable">False</property>
   <property name="destroy_with_parent">False</property>
   <property name="icon_name">gtk-cdrom</property>
   <property name="decorated">True</property>
@@ -88,7 +88,7 @@
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
-			  <property name="wrap">False</property>
+			  <property name="wrap">True</property>
 			  <property name="selectable">False</property>
 			  <property name="xalign">0</property>
 			  <property name="yalign">0</property>
@@ -1001,6 +1001,7 @@
 	      <property name="can_focus">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
+	      <signal name="clicked" handler="gtk_widget_hide" object="prefs_window" last_modification_time="Fri, 06 Oct 2006 06:32:53 GMT"/>
 
 	      <child>
 		<widget class="GtkAlignment" id="alignment2">
