interface: the state of the systray checkbox is now set according to the status of systray_enable in config

--- a/gimmix/glade/gimmix.glade
+++ b/gimmix/glade/gimmix.glade
@@ -820,7 +820,7 @@
 		      <property name="spacing">0</property>
 
 		      <child>
-			<widget class="GtkCheckButton" id="checkbutton1">
+			<widget class="GtkCheckButton" id="systray_checkbutton">
 			  <property name="border_width">6</property>
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
