--- a/gimmix/glade/gimmix.glade
+++ b/gimmix/glade/gimmix.glade
@@ -62,8 +62,8 @@
 			  <property name="icon_size">6</property>
 			  <property name="xalign">0</property>
 			  <property name="yalign">0</property>
-			  <property name="xpad">10</property>
-			  <property name="ypad">10</property>
+			  <property name="xpad">14</property>
+			  <property name="ypad">14</property>
 			</widget>
 		      </child>
 		    </widget>
@@ -84,7 +84,7 @@
 		      <child>
 			<widget class="GtkLabel" id="song_label">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Song name</property>
+			  <property name="label" translatable="yes">Title</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -109,7 +109,7 @@
 		      <child>
 			<widget class="GtkLabel" id="artist_label">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Artist name</property>
+			  <property name="label" translatable="yes">Artist</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -134,7 +134,7 @@
 		      <child>
 			<widget class="GtkLabel" id="album_label">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Album name</property>
+			  <property name="label" translatable="yes">Album</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
