--- a/gimmix/glade/gimmix.glade
+++ b/gimmix/glade/gimmix.glade
@@ -3,11 +3,11 @@
 <!--*- mode: xml -*-->
 <glade-interface>
   <widget class="GtkWindow" id="main_window">
-    <property name="width_request">450</property>
-    <property name="height_request">400</property>
+    <property name="width_request">380</property>
     <property name="visible">True</property>
     <property name="title" translatable="yes">Gimmix</property>
-    <property name="icon_name">gtk-cdrom</property>
+    <property name="resizable">False</property>
+    <property name="icon">gimmix.png</property>
     <signal name="destroy" handler="gtk_main_quit"/>
     <child>
       <widget class="GtkVBox" id="vbox1">
@@ -29,7 +29,7 @@
                         <property name="border_width">1</property>
                         <property name="label_xalign">0</property>
                         <property name="label_yalign">0</property>
-                        <property name="shadow_type">GTK_SHADOW_IN</property>
+                        <property name="shadow_type">GTK_SHADOW_NONE</property>
                         <child>
                           <widget class="GtkImage" id="album_image">
                             <property name="visible">True</property>
@@ -279,7 +279,6 @@
           <widget class="GtkExpander" id="expander1">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="expanded">True</property>
             <child>
               <widget class="GtkVBox" id="vbox8">
                 <property name="visible">True</property>
@@ -322,6 +321,7 @@
                     </child>
                     <child>
                       <widget class="GtkHPaned" id="hpaned1">
+                        <property name="height_request">220</property>
                         <property name="visible">True</property>
                         <property name="border_width">5</property>
                         <child>
