--- a/gimmix/glade/gimmix.glade
+++ b/gimmix/glade/gimmix.glade
@@ -7,7 +7,7 @@
     <property name="visible">True</property>
     <property name="title" translatable="yes">Gimmix</property>
     <property name="resizable">False</property>
-    <property name="icon">gimmix.png</property>
+    <property name="icon_name">gtk-cdrom</property>
     <signal name="destroy" handler="gtk_main_quit"/>
     <child>
       <widget class="GtkVBox" id="vbox1">
