--- a/gimmix/trunk/src/glade/gimmix.glade
+++ b/gimmix/trunk/src/glade/gimmix.glade
@@ -729,7 +729,7 @@ mpd user name and password and click on the Apply button.
             <property name="visible">True</property>
             <property name="border_width">6</property>
             <property name="spacing">18</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">GTK_BUTTONBOX_SPREAD</property>
             <child>
               <widget class="GtkButton" id="fr_apply">
                 <property name="visible">True</property>
@@ -1020,8 +1020,10 @@ mpd user name and password and click on the Apply button.
                 <property name="visible">True</property>
                 <child>
                   <widget class="GtkNotebook" id="notebook1">
+                    <property name="height_request">150</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="show_tabs">False</property>
                     <property name="scrollable">True</property>
                     <child>
                       <widget class="GtkScrolledWindow" id="scrolledwindow1">
@@ -1045,29 +1047,9 @@ mpd user name and password and click on the Apply button.
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkLabel" id="label5">
-                        <property name="visible">True</property>
-                        <property name="label" translatable="yes">Playlist</property>
-                      </widget>
-                      <packing>
-                        <property name="type">tab</property>
-                        <property name="tab_expand">False</property>
-                        <property name="tab_fill">False</property>
-                      </packing>
-                    </child>
-                    <child>
                       <placeholder/>
-                    </child>
-                    <child>
-                      <widget class="GtkLabel" id="label25">
-                        <property name="visible">True</property>
-                        <property name="label" translatable="yes">Library</property>
-                      </widget>
                       <packing>
                         <property name="type">tab</property>
-                        <property name="position">1</property>
-                        <property name="tab_expand">False</property>
-                        <property name="tab_fill">False</property>
                       </packing>
                     </child>
                   </widget>
