--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -1528,6 +1528,7 @@ mpd user name and password and click on the Apply button.
 			  <child>
 			    <widget class="GtkButton" id="prev_button">
 			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Previous</property>
 			      <property name="can_focus">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
@@ -1554,6 +1555,7 @@ mpd user name and password and click on the Apply button.
 			  <child>
 			    <widget class="GtkButton" id="play_button">
 			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Play</property>
 			      <property name="can_focus">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
@@ -1580,6 +1582,7 @@ mpd user name and password and click on the Apply button.
 			  <child>
 			    <widget class="GtkButton" id="stop_button">
 			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Stop</property>
 			      <property name="can_focus">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
@@ -1606,6 +1609,7 @@ mpd user name and password and click on the Apply button.
 			  <child>
 			    <widget class="GtkButton" id="next_button">
 			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Next</property>
 			      <property name="can_focus">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
@@ -1632,6 +1636,7 @@ mpd user name and password and click on the Apply button.
 			  <child>
 			    <widget class="GtkButton" id="info_button">
 			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Info</property>
 			      <property name="can_focus">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
@@ -1658,6 +1663,7 @@ mpd user name and password and click on the Apply button.
 			  <child>
 			    <widget class="GtkToggleButton" id="repeat_toggle">
 			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Repeat</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
 			      <property name="active">False</property>
@@ -1685,6 +1691,7 @@ mpd user name and password and click on the Apply button.
 			  <child>
 			    <widget class="GtkToggleButton" id="shuffle_toggle">
 			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Shuffle</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
 			      <property name="active">False</property>
@@ -1712,6 +1719,7 @@ mpd user name and password and click on the Apply button.
 			  <child>
 			    <widget class="GtkButton" id="pref_button">
 			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">Preferences</property>
 			      <property name="can_focus">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
