--- a/trunk/src/glade/gimmix.glade
+++ b/trunk/src/glade/gimmix.glade
@@ -2556,7 +2556,7 @@ Note: The directory should be same as what you specified in your mpd settings. I
 			  <property name="rules_hint">True</property>
 			  <property name="reorderable">False</property>
 			  <property name="enable_search">True</property>
-			  <property name="fixed_height_mode">False</property>
+			  <property name="fixed_height_mode">True</property>
 			  <property name="hover_selection">False</property>
 			  <property name="hover_expand">False</property>
 			</widget>
